# dimeta-tests

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clean-folder.cmake  config-util.cmake  ctest-helper.cmake  llvm-util.cmake  verify-must-json-output.cmake
dimeta-pass/pass/: CMakeLists.txt  DITestPass.cpp  StructLayout.cpp  StructLayout.h
dimeta-verifier-pass/: CMakeLists.txt
dimeta-verifier-pass/pass/: CMakeLists.txt  DITestPass.cpp  TypeLayout.cpp  TypeLayout.h
miniapps/: CMakeLists.txt
miniapps/104.milc/: Makefile  README.md  cmplx.c  com_mpi.c  com_vanilla.c  comdefs.h  control.c  f_meas.c  gauge_stuff.c  gaussrand.c  gcc_addvec.c  gcc_m_amatvec.c  gcc_m_amv_4vec.c  gcc_m_mat_an.c  gcc_m_mat_na.c  gcc_m_mat_nn.c  gcc_m_matvec.c  gcc_m_mv_s_4dir.c  gcc_make_ahmat.c  gcc_s_m_a_mat.c  gcc_s_m_a_vec.c  gcc_su3_adjoint.c  gcc_su3_proj.c  gcc_su3mat_copy.c  gcc_sub4vecs.c  gcc_uncmp_ahmat.c  io_helpers.c  io_lat4.c  io_nonansi.c  ks_imp_includes.h  layout_hyper_prime.c  m_amat_hwvec.c  m_amatvec.c  m_amv_4dir.c  m_amv_4vec.c  m_mat_an.c  m_mat_hwvec.c  m_mat_na.c  m_mat_nn.c  m_matvec.c  (+24 more)
miniapps/104.milc/data/: mref_su3imp.in  mtest_su3imp.in  su3imp.in
miniapps/122.tachyon/: Makefile  README.md  api.c  apigeom.c  apitrigeom.c  box.c  box.h  camera.c  camera.h  coordsys.c  coordsys.h  cylinder.c  cylinder.h  extvol.c  extvol.h  getargs.c  global.c  global.h  glwin.c  grid.c  grid.h  hash.c  imageio.c  imageio.h  imap.c  imap.h  intersect.c  intersect.h  jpeg.c  jpeg.h  light.c  light.h  machine.h  macros.h  main.c  parallel.c  parallel.h  parse.c  parvol.c  parvol.h  (+42 more)
miniapps/amg2013/: Makefile  Makefile.include
miniapps/amg2013/IJ_mv/: Makefile
miniapps/amg2013/krylov/: Makefile
miniapps/amg2013/parcsr_ls/: Makefile
miniapps/amg2013/parcsr_mv/: Makefile
miniapps/amg2013/seq_mv/: Makefile
miniapps/amg2013/sstruct_mv/: Makefile
miniapps/amg2013/struct_mv/: Makefile
miniapps/amg2013/test/: Makefile
miniapps/amg2013/utilities/: Makefile  utilities.h
miniapps/lulesh/: Makefile
miniapps/lulesh-ad/: Makefile
miniapps/lulesh-ad/lulesh/: Makefile
miniapps/tealeaf/: CMakeLists.txt  Makefile  tea.in  tea.problems
support/: CMakeLists.txt  dimeta-bootstrap.sh  mbb-bootstrap.sh  mbb.patch  must-bootstrap.sh  must-layout-2.xml  parse-log.py  test-prep.py
testsuite/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
testsuite/dimeta/: 01_malloc_int.c
testsuite/miniapp/milc/: quark_stuff.c
testsuite/minitypes/milc/: test_allocate_types.c
testsuite/minitypes/milc/include/: complex.h  config.h  generic.h  generic_ks.h  generic_quark_types.h  io_lat.h  lattice.h  su3.h
testsuite/minitypes/tachyon/: parse.c  test_allocate_types.c
testsuite/minitypes/tachyon/include/: hash.h  parse.h  types.h  util.h
testsuite/mpi-bugbench/: Correct-mpi_isend-001.c  Correct-mpi_isend-002.c  Correct-mpi_send-001.c  Correct-mpi_send-002.c  Correct-mpi_send-003.c  Correct-mpi_send-004.c  Correct-mpi_send-005.c  Correct-mpi_send-006.c  Correct-mpi_send-007.c  Correct-mpi_send-008.c  Correct-mpi_send-009.c  Correct-mpi_send-010.c  Correct-mpi_send-011.c  Correct-mpi_send-012.c  Correct-mpi_send-013.c  Correct-mpi_send-014.c  Correct-mpi_send-015.c  Correct-mpi_send-016.c  Correct-mpi_send-017.c  Correct-mpi_send-018.c  Correct-mpi_send-019.c  Correct-mpi_send-020.c  Correct-mpi_send-021.c  Correct-mpi_send-022.c  Correct-mpi_send-023.c  Correct-mpi_send-024.c  Correct-mpi_send-025.c  Correct-mpi_send-026.c  Correct-mpi_send-027.c  Correct-mpi_send-028.c  Correct-mpi_send-029.c  Correct-mpi_send-030.c  Correct-mpi_send-031.c  LocalParameterMissmatch-Dtype-mpi_isend-001.c  LocalParameterMissmatch-Dtype-mpi_isend-002.c  LocalParameterMissmatch-Dtype-mpi_isend-003.c  LocalParameterMissmatch-Dtype-mpi_isend-004.c  LocalParameterMissmatch-Dtype-mpi_isend-005.c  LocalParameterMissmatch-Dtype-mpi_isend-006.c  LocalParameterMissmatch-Dtype-mpi_isend-007.c  (+57 more)
